Fixes to narrow resolution scrolling and letter alignment

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@
   display:inline-block;
 }
 
+.height100 {
+  height:100%;
+}
+
 body {
   -webkit-overflow-scrolling: touch;
 }
