--- a/src/shared/features/GrandparentViews/Inbox/Inbox.css
+++ b/src/shared/features/GrandparentViews/Inbox/Inbox.css
@@ -23,7 +23,7 @@
   justify-items:center;
   justify-content:center;
   flex-wrap:wrap;
-  overflow-y:hidden;
+  overflow-y:hidden !important;
 }
 
 .noInboxMargin.MuiGrid-item {
