--- a/src/shared/features/GrandparentViews/Inbox/components/ExtendedInbox/ExtendedInbox.css
+++ b/src/shared/features/GrandparentViews/Inbox/components/ExtendedInbox/ExtendedInbox.css
@@ -4,8 +4,9 @@
   margin-left:auto;
   margin-right:auto;
   margin-top:0;
+  padding:20px;
   background-color: white;
-  border-radius:10px;
   box-shadow: -5px 5px 10px 0px #333, 
   5px 5px 10px 0px #333;
+  overflow-y:scroll;
 }
